# trilateration

./: .gitignore  README.md  pyproject.toml
examples/: anchors.csv  anchors.json
mcu/esp32_s3_demo/: CMakeLists.txt  sdkconfig.defaults
mcu/esp32_s3_demo/components/trilat/: CMakeLists.txt  trilat.c
mcu/esp32_s3_demo/components/trilat/include/: trilat.h
mcu/esp32_s3_demo/host_tests/: Makefile  test_trilat.c
mcu/esp32_s3_demo/main/: CMakeLists.txt  main.c
notebooks/: trilateration_demo.ipynb
src/trilateration/: __init__.py  cli.py  coordinates.py  solver.py  visualization.py
tests/: test_cli.py  test_coordinates.py  test_solver.py
