[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trilateration"
version = "0.1.0"
description = "Altitude-constrained 3D trilateration from GNSS anchors and TWR ranges."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[project.scripts]
trilat = "trilateration.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
